--- a/package.json
+++ b/package.json
@@ -5,24 +5,22 @@
   "type": "module",
   "scripts": {
     "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "build": "tsc && vite build",
     "serve": "react-dotenv && serve build",
     "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "@types/google-maps": "^3.2.6",
+    "@types/react-geocode": "^0.2.4",
     "classnames": "^2.3.2",
-    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
-    "module-alias": "^2.2.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dotenv": "^0.1.3",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5"
