--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.9.4",
