--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@types/react-geocode": "^0.2.4",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
-    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
     "react-hook-form": "^7.48.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.9",
     "@types/node": "^20.9.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
