--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/google-maps": "^3.2.6",
     "@types/react-geocode": "^0.2.4",
     "classnames": "^2.3.2",
@@ -23,6 +24,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
